--- a/projects/2023-12-15-plant-population-prediction/references.bib
+++ b/projects/2023-12-15-plant-population-prediction/references.bib
@@ -52,3 +52,37 @@
 }
 
 @misc{IUCN2023, title={Summary Statistics}, url={https://www.iucnredlist.org/resources/summary-statistics}, journal={Red List}, author={IUCN}, year={2023}} 
+
+@misc{towardsdatascience2020, title={How I Consistently Improve My Machine Learning Models From 80% to Over 90% Accuracy}, url={https://towardsdatascience.com/how-i-consistently-improve-my-machine-learning-models-from-80-to-over-90-accuracy-6097063e1c9a#:~:text=Introduction,)%20of%20at%20least%2090%25.}, journal={Data Science}, author={TowardsDataScience}, year={2020}}
+
+@article{byun2017,
+	title = {Management of invasive plants through ecological resistance},
+	author = {Byun, Chaeho and de Blois, Sylvie and Brisson, Jacques},
+	year = {2017},
+	month = {07},
+	date = {2017-07-28},
+	journal = {Biological Invasions},
+	pages = {13--27},
+	volume = {20},
+	number = {1},
+	doi = {10.1007/s10530-017-1529-7},
+	url = {http://dx.doi.org/10.1007/s10530-017-1529-7},
+	langid = {en}
+}
+
+@article{BIEN,
+	title = {BIEN: Tools for Accessing the Botanical Information and Ecology
+Network Database},
+	author = {Maitner, Brian},
+	year = {2023},
+	date = {2023},
+	url = {https://CRAN.R-project.org/package=BIEN}
+}
+
+@article{rredlist,
+	title = {rredlist: 'IUCN' Red List Client},
+	author = {Gearty, William and Chamberlain, Scott},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=rredlist}
+}
