--- a/projects/2023-12-15-plant-population-prediction/references.bib
+++ b/projects/2023-12-15-plant-population-prediction/references.bib
@@ -53,7 +53,7 @@
 
 @misc{IUCN2023, title={Summary Statistics}, url={https://www.iucnredlist.org/resources/summary-statistics}, journal={Red List}, author={IUCN}, year={2023}} 
 
-@misc{towardsdatascience2020, title={How I Consistently Improve My Machine Learning Models From 80% to Over 90% Accuracy}, url={https://towardsdatascience.com/how-i-consistently-improve-my-machine-learning-models-from-80-to-over-90-accuracy-6097063e1c9a#:~:text=Introduction,)%20of%20at%20least%2090%25.}, journal={Data Science}, author={TowardsDataScience}, year={2020}}
+@misc{towardsdatascience2020, title={How I Consistently Improve My Machine Learning Models From 80% to Over 90% Accuracy}, url={https://towardsdatascience.com/how-i-consistently-improve-my-machine-learning-models-from-80-to-over-90-accuracy-6097063e1c9a#:~:text=Introduction,)%20of%20at%20least%2090%25.}, journal={Data Science}, author={Towards Data Science,}, year={2020}}
 
 @article{byun2017,
 	title = {Management of invasive plants through ecological resistance},
