--- a/projects/2024-03-09-georgia-marsh/index.qmd
+++ b/projects/2024-03-09-georgia-marsh/index.qmd
@@ -13,7 +13,7 @@ categories: [MEDS, Ecology, Coastal]
 bibliography: references.bib
 citation:
   url: https://shmuir.github.io/projects/2024-03-09-georgia-marsh/
-image: infographic-final.png
+image: banner.jpg
 format:
   html:
     code-fold: false
