--- a/about.qmd
+++ b/about.qmd
@@ -5,7 +5,7 @@ subtitle: ""
 
 ## {{< fa bacteria >}} Professionally
 
-I'm a Masters of Environmental Data Science student at the Bren School at the University of California, Santa Barbara. I am also an Arnhold Environmental Fellow collaborating with the [emLab](https://emlab.ucsb.edu/) and Conservation International, focusing on elephant connectivity under climate change. 
+I'm a Masters of Environmental Data Science student at the Bren School at the University of California, Santa Barbara. My [capstone project](https://bren.ucsb.edu/projects/species-distribution-modeling-early-season-milkweed-los-padres-national-forest) is focused on identifying high-priority survey sites for milkweed conservation in the Los Padres National Forest for the Santa Barbara Botanic Garden. I am also an Arnhold Environmental Graduate Fellow working with the [emLab](https://emlab.ucsb.edu/) and Conservation International, focusing on elephant connectivity under climate change and land cover shifts. 
 
 :::{.column-margin}
 ```{r}
@@ -17,7 +17,7 @@ Watering research *Acmispon* plants in the SMCM greenhouse!
 :::
 :::
 
-Previously, I completed my undergraduate degrees in Biology and Environmental Studies (+ French Minor) at St. Mary's College of Maryland (SMCM). There, I had two main areas I focused on: plant sciences and coastal ecology. I conducted research on plant-microbe interactions and the effect of salinity in a [plant ecology lab](https://ltorresmartinez.com/) where I was also the lab manager for my last 6 months there. My undergraduate thesis was on measuring wave mitigation of constructed oyster reefs using DIY wave gauges, and I continued research with my same [thesis adviser](https://gurbisz-coastal-ecology.netlify.app/) on submerged aquatic vegetation. A big reoccurring theme is my love for plants! Towards the end of my undergrad, I also discovered my passion for environmental data science and began to merge these two themes.
+Previously, I completed my undergraduate degrees in Biology and Environmental Studies (+ French Minor) at St. Mary's College of Maryland (SMCM) where I had two main areas of focus: plant sciences and coastal ecology. I conducted research on salinity effects on plant-microbe interactions in a [plant ecology lab](https://ltorresmartinez.com/) where I was also the lab manager for my last 6 months there. My undergraduate thesis looked at wave mitigation by constructed oyster reefs using DIY wave gauges, and I continued on with submerged aquatic vegetation research with my same [thesis advisor](https://gurbisz-coastal-ecology.netlify.app/). Towards the end of my undergraduate experience, I also discovered my passion for environmental data science and GIS. 
 
 :::{.column-margin}
 ```{r}
@@ -25,7 +25,7 @@ Previously, I completed my undergraduate degrees in Biology and Environmental St
 knitr::include_graphics("images/sailing.JPG")
 ```
 ::: {.extra-small-text .dark-gray-text .topbr}
-Sailing at college sailing nationals 2022, hosted by Tulane. 
+College sailing nationals 2022 at Tulane University. 
 :::
 :::
 
