--- a/projects/2023-11-13-apple-bloom/index.qmd
+++ b/projects/2023-11-13-apple-bloom/index.qmd
@@ -14,11 +14,11 @@ bibliography: references.bib
 citation:
   url: https://shmuir.github.io/projects/2023-11-13-apple-bloom/
 image: apple-poster.png
-draft: false
+draft: true
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, eval = FALSE)
 ```
 
 ```{r}
